# CicadaPlayer

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_player.sh  default.profraw  setup.env
build_tools/iOS/: CMakeLists.txt  iOS.cmake
cmdline/: .gitignore  CMakeLists.txt  IEventReceiver.h  NetWorkEventReceiver.cpp  NetWorkEventReceiver.h  README.md  SDLEventReceiver.cpp  SDLEventReceiver.h  cicadaEventListener.cpp  cicadaEventListener.h  cicadaPlayer.cpp  getListener.cpp  getListener.h  toolchain.windows.cmake
cmdline/example/: CMakeLists.txt  syncPlayer.cpp  syncPlayerEventListener.h
cmdline/msvc_build/: .gitignore  build_win.bat
cmdline/nativeWindow/: CocoaWindow.m  WindowsWindow.c  X11Window.c  nativeWindow.h
cmdline/tools/: command.sh  seekTest.sh
framework/: .gitignore  Android.cmake  CMakeLists.txt  Emscripten.cmake  Linux.cmake  af_config.h  application.cmake  build_Windows.sh  build_ios.sh  cachedDemuxerTest.cpp  code_coverage.cmake  code_learning.zh.md  curl_test.cpp  demuxer_test.cpp  iOS.cmake  macOSX.cmake  module_config.cmake  windows.cmake
framework/WebAssemblyPlayer/: CMakeLists.txt  README.md  WABitStreamDecoder.cpp  WABitStreamDecoder.h  bitStreamDecoder.cpp  bitStreamDecoder.h
framework/base/: IDCA.h  OptionOwner.h  options.cpp  options.h  prototype.h
framework/cacheModule/: CMakeLists.txt  CacheManager.cpp  CacheManager.h  CacheModule.cpp  CacheModule.h
framework/codec/: ActiveDecoder.cpp  ActiveDecoder.h  CMakeLists.txt  IDecoder.h  IVideoFrame.h  avcodecDecoder.cpp  avcodecDecoder.h  codecPrototype.cpp  codecPrototype.h  decoderFactory.cpp  decoderFactory.h  utils_ios.h  utils_ios.mm  videoDecoderFactory.cpp  videoDecoderFactory.h
framework/communication/: CMakeLists.txt  IProtocol.cpp  IProtocol.h  TCPProtocol.cpp  TCPProtocol.h  messageServer.cpp  messageServer.h
framework/data_source/: CMakeLists.txt  ContentDataSource.cpp  ContentDataSource.h  DataSourceUtils.cpp  DataSourceUtils.h  IDataSource.cpp  IDataSource.h  SourceReader.cpp  SourceReader.h  cachedSource.h  code_learning.zh.md  dataSourceIO.cpp  dataSourceIO.h  dataSourcePrototype.cpp  dataSourcePrototype.h  data_source_test.cpp  ffmpeg_data_source.cpp  ffmpeg_data_source.h  file_data_source.cpp  file_data_source.h  opensslthreadlock.c  opensslthreadlock.h  proxyDataSource.cpp  proxyDataSource.h
framework/demuxer/: AVBSF.cpp  AVBSF.h  AdtsBSF.cpp  AdtsBSF.h  CMakeLists.txt  DemuxerMeta.h  DemuxerMetaInfo.h  HLSSupport.md  IDemuxer.cpp  IDemuxer.h  avFormatDemuxer.cpp  avFormatDemuxer.h  avFormatSubtitleDemuxer.cpp  avFormatSubtitleDemuxer.h  build_android.sh  demuxerPrototype.cpp  demuxerPrototype.h  demuxer_service.cpp  demuxer_service.h
framework/drm/: CMakeLists.txt  DrmHandler.cpp  DrmHandler.h  DrmHandlerPrototype.cpp  DrmHandlerPrototype.h  DrmInfo.cpp  DrmInfo.h  DrmManager.cpp  DrmManager.h  WideVineDrmHandler.cpp  WideVineDrmHandler.h
framework/ffmpeg/: CMakeLists.txt  ffmpeg_test.cpp  sdl_test.cpp
framework/filter/: CMakeLists.txt  FilterManager.cpp  FilterManager.h  IAudioFilter.cpp  IAudioFilter.h  IVideoFilter.h  VideoFilterChain.cpp  VideoFilterChain.h  avFilterAudio_test.cpp  ffmpegAudioFilter.cpp  ffmpegAudioFilter.h  ffmpegVideoFilter.cpp  ffmpegVideoFilter.h  filterFactory.cpp  filterFactory.h  filterPrototype.cpp  filterPrototype.h
framework/muxer/: CMakeLists.txt  IMuxer.h  IMuxerPrototype.cpp  IMuxerPrototype.h
framework/render/: CMakeLists.txt  audioRender_test.cpp  renderFactory.cpp  renderFactory.h  test_vsync.cpp
framework/tests/: Apple.cmake  CMakeLists.txt  GoogleTest.cmake
framework/utils/: AFMediaType.h  AFUtils.c  AFUtils.h  AssUtils.cpp  AssUtils.h  AsyncJob.cpp  AsyncJob.h  AutoAVFrame.h  CMakeLists.txt  CicadaDynamicLoader.cpp  CicadaDynamicLoader.h  CicadaJSON.cpp  CicadaJSON.h  CicadaThumbnailParser.cpp  CicadaThumbnailParser.h  CicadaType.h  CicadaUtils.cpp  CicadaUtils.h  DrmUtils.cpp  DrmUtils.h  Md5Utils.cpp  Md5Utils.h  UTCTimer.cpp  UTCTimer.h  UrlUtils.cpp  UrlUtils.h  afThread.cpp  afThread.h  afThreadTest.cpp  af_clock.cpp  af_clock.h  af_clock_test.cpp  af_string.cpp  af_string.h  appleLog.h  appleLog.m  basename.c  bitStreamParser.cpp  bitStreamParser.h  cJSON.c  (+35 more)
mediaPlayer/: .gitignore  CMakeLists.txt  CicadaPlayerPrototype.cpp  CicadaPlayerPrototype.h  ErrorCodeMap.cpp  ErrorCodeMap.h  EventCodeMap.cpp  EventCodeMap.h  ICicadaPlayer.h  MediaPlayer.cpp  MediaPlayer.h  MediaPlayerAnalyticsUtil.cpp  MediaPlayerAnalyticsUtil.h  MediaPlayerConfig.cpp  MediaPlayerConfig.h  MediaPlayerUtil.cpp  MediaPlayerUtil.h  PlayerCacheDataSource.cpp  PlayerCacheDataSource.h  QueryListener.cpp  QueryListener.h  SMPAVDeviceManager.cpp  SMPAVDeviceManager.h  SMPMessageControllerListener.cpp  SMPMessageControllerListener.h  SMPRecorderSet.cpp  SMPRecorderSet.h  SMP_DCAManager.cpp  SMP_DCAManager.h  SuperMediaPlayer.cpp  SuperMediaPlayer.h  SuperMediaPlayerDataSourceListener.cpp  SuperMediaPlayerDataSourceListener.h  TrafficStats.c  TrafficStats.h  buffer_controller.cpp  buffer_controller.h  hls_adaptive_manager.cpp  hls_adaptive_manager.h  mediaPlayerSubTitleListener.cpp  (+19 more)
mediaPlayer/abr/: AbrAlgoStrategy.cpp  AbrAlgoStrategy.h  AbrBufferAlgoStrategy.cpp  AbrBufferAlgoStrategy.h  AbrBufferRefererData.cpp  AbrBufferRefererData.h  AbrManager.cpp  AbrManager.h  AbrRefererData.cpp  AbrRefererData.h
mediaPlayer/analytics/: AnalyticsCollectorFactory.cpp  AnalyticsCollectorFactory.h  AnalyticsCollectorImpl.cpp  AnalyticsCollectorImpl.h  AnalyticsCollectorListener.h  AnalyticsQueryListener.h  AnalyticsType.h  AnalyticsUtils.cpp  AnalyticsUtils.h  IAnalyticsCollector.cpp  IAnalyticsCollector.h  IAnalyticsPlayer.h  IAnalyticsRender.h  IAnalyticsSource.h
mediaPlayer/externalPlayer/: AppleAVPlayer.cpp  AppleAVPlayer.h  AppleAVPlayer.mm  AppleAVPlayerHandler.h  AppleAVPlayerHandler.mm  AppleAVPlayerLayerProcessor.h  AppleAVPlayerLayerProcessor.mm  AppleAVPlayerUtil.h  AppleAVPlayerUtil.m  JNIPlayer.cpp  (+1 more)
plugin/: .gitignore  BiDataSource.cpp  BiDataSource.h  CMakeLists.txt
(+926 files in other folders)
